--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <div class="wrap">
     <div class="logo"><a href="/">logo</a></div>
     <div class="content-wrap">
         <div class="side-notebook">
-            <ul>
-                <li th:each="notebook : ${notebookList}" th:class="${notebook.id == targetNotebook.id} ? 'selected-item' : '' ">
-                    <a th:href="@{|/notebook/${notebook.id}|}" th:text="${notebook.name}"></a>
-                </li>
+<!--            <div th:each="notebook : ${notebookList}" th:unless="${notebook.parent != null}"-->
+<!--                 th:text="${notebook.id + '_' + notebook.name}"></div>-->
+<!--            <div th:each="notebook : ${notebookList}" th:if="${notebook.parent != null}"-->
+<!--                 th:text="${notebook.id + '_' + notebook.name + notebook.parent.id}"></div>-->
+<!--            <div th:each="notebook : ${notebookList}" th:if="${!#lists.isEmpty(notebook.childList)}">-->
+<!--               <div th:each="child : ${notebook.childList}" th:text="${child.id + '_' + child.name}"></div>-->
+<!--            </div>-->
+<!--            <div th:text="${targetNotebook.id}"></div>-->
+            <!--            <ul>-->
+            <!--                <li th:each="notebook : ${notebookList}" th:class="${notebook.id == targetNotebook.id} ? 'selected-item' : '' ">-->
+            <!--                    <a th:href="@{|/notebook/${notebook.id}|}" th:text="${notebook.name}"></a>-->
+            <!--                </li>-->
+            <!--            </ul>-->
+            <ul class="menu">
+                <li th:replace="~{/fragments :: tree(${targetNotebook}, ${notebookList})}"></li>
             </ul>
             <div>
                 <form action="/notebook/write" method="post">
                     <input type="submit" value="추가">
+                </form>
+                <form action="/notebook/add-group" method="post">
+                    <input type="hidden" name="notebookId" th:value="${targetNotebook.id}">
+                    <input type="submit" value="하위노트추가">
                 </form>
             </div>
         </div>
         <div class="side-page">
             <!--            3. 템플릿에서 게시물 목록 출력-->
             <ul>
-                <li th:each="notePage : ${notePageList}" th:class="${notePage.id == targetPost.id} ? 'selected-item' : '' ">
+                <li th:each="notePage : ${notePageList}"
+                    th:class="${notePage.id == targetPost.id} ? 'selected-item' : '' ">
                     <a th:href="@{|/detail/${notePage.id}|}" th:text="${notePage.title}"></a>
                 </li>
             </ul>
@@ -58,16 +76,16 @@
 </div>
 <script>
     ACTIONS_UPDATE = {
-        'url' : '/update',
-        'msg' : '수정하시겠습니까?'
+        'url': '/update',
+        'msg': '수정하시겠습니까?'
     };
     ACTIONS_DELETE = {
-        'url' : '/delete',
-        'msg' : '삭제하시겠습니까?'
+        'url': '/delete',
+        'msg': '삭제하시겠습니까?'
     }
 
     function updateFormAction(input, action) {
-        if(confirm(action.msg)) {
+        if (confirm(action.msg)) {
             input.form.action = action.url;
             input.form.submit();
         }
