노트 삭제 기능 구현

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -36,6 +36,10 @@
                     <input type="hidden" name="notebookId" th:value="${targetNotebook.id}">
                     <input type="submit" value="하위노트추가">
                 </form>
+                <form action="/notebook/delete" method="post">
+                    <input type="hidden" name="notebookId" th:value="${targetNotebook.id}">
+                    <input type="submit" value="삭제">
+                </form>
             </div>
         </div>
         <div class="side-page">
