회원가입, 로그인, 로그아웃 구현

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -45,6 +45,9 @@
                     <input type="text" name="notebookName" th:value="${targetNotebook.name}">
                     <input type="submit" value="이름 변경">
                 </form>
+                <a href="/member/signup">회원가입</a>
+                <a href="/member/login">로그인</a>
+                <a href="/member/login">로그아웃</a>
             </div>
         </div>
         <div class="side-page">
