--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -73,8 +73,19 @@
                 <div>
                     <input type="text" name="title" th:value="${targetPost.title}">
                 </div>
-                <div>
-                    <textarea name="content" cols="30" rows="10" th:text="${targetPost.content}"></textarea>
+                <div class="toast-editor-custom">
+                    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+                    <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+                    <div id="editor"></div>
+                    <script>
+                        const editor = new toastui.Editor({
+                            el: document.querySelector('#editor'),
+                            previewStyle: 'vertical',
+                            height: '650px',
+                            initialValue: ""
+                        });
+                    </script>
+<!--                    <textarea name="content" cols="30" rows="10" th:text="${targetPost.content}"></textarea>-->
                 </div>
                 <div>
                     <input type="button" value="수정" onclick="updateFormAction(this, ACTIONS_UPDATE)">
@@ -86,6 +97,7 @@
         </div>
     </div>
 </div>
+<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 <script>
     ACTIONS_UPDATE = {
         'url': '/update',
