--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -17,6 +17,7 @@
         </div>
         <div>
             <input type="submit" value="로그인">
+            <a href="/oauth2/authorization/google">Google</a>
         </div>
     </form>
 </div>
