노트 이동 기능 구현

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -53,3 +53,15 @@ a{
 .toast-editor-custom {
     background: white;
 }
+
+.modal-box {
+    height: 70%;
+    width:50%;
+}
+
+.note-tree {
+    height:80%;
+    border: 1px solid black;
+    overflow: auto;
+
+}
