--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,17 +5,51 @@
     <title>Title</title>
 </head>
 <body>
-<li th:fragment="tree(targetNotebook, notebookList)" th:each="notebook : ${notebookList}" th:class="${#lists.isEmpty(notebook.childList) and notebook.id == targetNotebook.id} ? 'selected-item' : ''">
-    <a th:href="@{|/notebook/${notebook.id}|}" th:if="${#lists.isEmpty(notebook.childList)}" th:text="${notebook.name}" onclick="saveOpenList()"></a> <!-- 하위 노트가 없는 노트 -->
+<li th:fragment="tree(targetNotebook, notebookList)"
+    th:each="notebook : ${notebookList}"
+    th:with="noChild = ${#lists.isEmpty(notebook.childList)},
+             hasChild = ${!noChild},
+             onTarget = ${targetNotebook.id == notebook.id}"
+    th:class="${noChild and onTarget} ? 'selected-item' : ''">
+    <a th:href="@{|/notebook/${notebook.id}|}" th:if="${noChild}"
+       th:text="${notebook.name}" onclick="saveOpenList()"></a> <!-- 하위 노트가 없는 노트 -->
 
-    <details th:id="${'d' + notebook.id}" th:unless="${#lists.isEmpty(notebook.childList)}" > <!-- 하위 노트가 있는 노트 -->
+    <details th:id="${'d' + notebook.id}" th:unless="${noChild}" > <!-- 하위 노트가 있는 노트 -->
         <summary th:class="${notebook.id == targetNotebook.id} ? 'selected-item' : '' ">
             <a th:href="@{|/notebook/${notebook.id}|}" th:text="${notebook.name}" onclick="saveOpenList()"></a>
         </summary>
         <ul>
-            <li th:if="${#lists.isEmpty(notebook.childList)}" th:replace="~{/fragments :: tree(${targetNotebook}, ${notebook.childList})}"></li>
+            <li th:if="${noChild}"
+                th:replace="~{/fragments :: tree(${targetNotebook}, ${notebook.childList})}"></li>
         </ul>
     </details>
 </li>
+
+<div th:fragment="tree-item(notebook, hasChild, checkable)">
+    <input th:if="${hasChild and checkable}" type="radio" name="destinationId" th:value="${notebook.id}">
+    <a th:if="${hasChild}"
+       th:text="${notebook.name}" onclick="saveOpenList()"></a> <!-- 하위 노트가 없는 노트 -->
+</div>
+
+<li th:fragment="move_tree(targetNotebook, notebookList, notCheckableList)"
+    th:each="notebook : ${notebookList}"
+    th:with="noChild = ${#lists.isEmpty(notebook.childList)},
+             hasChild = ${!noChild},
+             onTarget = ${targetNotebook.id == notebook.id},
+             checkable = ${!#lists.contains(notCheckableList, notebook)}"
+    th:class="${noChild and onTarget} ? 'selected-item' : ''">
+
+    <div th:replace="~{/fragments::tree-item(${notebook}, ${noChild}, ${checkable})}"></div>
+    <details th:id="${'d' + notebook.id}" th:if="${hasChild}" > <!-- 하위 노트가 있는 노트 -->
+        <summary th:class="${onTarget} ? 'selected-item' : '' ">
+            <div th:replace="~{/fragments::tree-item(${notebook}, ${hasChild}, ${checkable})}"></div>
+        </summary>
+        <ul>
+            <li th:if="${noChild}"
+                th:replace="~{/fragments :: move_tree(${targetNotebook}, ${notebook.childList}, ${notCheckableList})}"></li>
+        </ul>
+    </details>
+</li>
+
 </body>
 </html>
