--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -151,13 +151,13 @@
     }
 
     const openList = localStorage.getItem("openList");
-
-    if (openList != null) {
-        openListArr = JSON.parse(openList);
-        openListArr.forEach(function (item) {
-            document.getElementById(item).setAttribute("open", true);
-        });
-    }
+    //
+    // if (openList != null) {
+    //     openListArr = JSON.parse(openList);
+    //     openListArr.forEach(function (item) {
+    //         document.getElementById(item).setAttribute("open", true);
+    //     });
+    // }
 
 </script>
 </body>
